@@ -1,4 +1,5 @@
 # Build 5.10.4 Release ??/??/2024
+  1. Races/GenRaces support cultural ability parms
 
 # Build 5.10.3 Release 01/01/2024
   *. CoffeeMud now officially requires jdk 1.8.  ATM, it will still compile in 1.6 tho.
